-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Testing Infrastructure
-
None
-
Fully Compatible
-
ALL
-
Execution Team 2019-10-07
-
50
-
None
-
None
-
None
-
None
-
None
-
None
-
None
[2019/09/27 14:52:31.512] /data/mci/f7b2a6acdc3d01ded6cc8f0f20c1760d/src/src/mongo/db/pipeline/process_interface_standalone.cpp:352:5: error: object destroyed immediately after creation; did you mean to name the object? [bugprone-unused-raii,-warnings-as-errors] [2019/09/27 14:52:31.512] Lock::DBLock(opCtx, targetNs.db(), MODE_X); [2019/09/27 14:52:31.512] ^ ~ [2019/09/27 14:52:31.512] give_me_a_name