SERVER-43735: Remove bugprone-unused-raii in process_interface_standalone.cpp.

Up the clang-tidy timeout to 4 hours (a successful run took 2 hours 6 minutes).